<resources>
    <string name="how_it_works">How It Works?</string>
    <string name="adding_notes_1">Start by creating a case for the patient.</string>
    <string name="adding_notes_2">For each case, you can have multiple interactions (or consultations) with the patient (clinic, video, chat, call etc.). E.g. you can think of one clinic appointment as one interaction (or consultation) and a phone call as another interaction.</string>
    <string name="adding_notes_3">Save records and create prescriptions for any interaction you have with the patient.</string>
    <string name="adding_notes_4">If a particular case is closed, you can create a new case for the patient where appropriate.</string>
    <string name="step1_case_name">Step 1. Enter Case Name</string>
    <string name="step2_create_interactions">Step 2. Create Interaction</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="proceed_to_add_record">Proceed To Add Records</string>
    <string name="proceed_to_create_notes">Proceed To Create Notes</string>
    <string name="create_new_interaction">Create New Interaction</string>
    <string name="casetitle">Case: </string>
    <string name="interaction">Interaction</string>
    <string name="exit">Exit</string>
    <string name="adding_notes">Adding Notes</string>
    <string name="no_notes_text">Select which type of record you want to add</string>
    <string name="upload_handwritten_notes">Upload HandWritten Notes</string>
    <string name="log_evaluation_records">Log Evaluation Records</string>
    <string name="log_treatment_plan">Log Treatment Plan</string>
    <string name="share_prescription">Share Prescription</string>
    <string name="save_prescription">Save Prescription</string>
    <string name="gettingstarted">Getting Started</string>
    <string name="no_patient_text">No patient found in the name of</string>
    <string name="all_category_text">All Category</string>
    <string name="searching_patient">Searching.Please wait...</string>
    <string name="empty_patient_text">Please search for the patient you want to book an appointment for</string>
    <string name="add_patient_text">To Book an Appt. you need to add a patient</string>
    <string name="add_patient_button_text">Add First Patient</string>
    <string name="setup_practice_button_text">Setup Practice</string>
    <string name="setup_practice_text">Add/Configure Services like Video,Clinic or Chat for Consultation</string>
    <string name="setup_profile_button_text">Profile</string>
    <string name="setup_profile_text">Setup your Personal &amp; Professional identity</string>
    <string name="setup_staff_button_text">Staff</string>
    <string name="setup_staff_text">Have People to help?</string>
    <string name="setup_preferences_text">Set your Reminders, Records Preferences</string>
    <string name="setup_preferences_button_text">Preferences</string>
    <string name="search_text">Search for patient by name or number</string>
    <string name="patient_search_text"><font size="16">Id/Name/Ph-Number</font></string>
    <string name="add_new_patient_button_text">Add Patient</string>
    <string name="search_error_text">No match found for this patient.\nPlease click on \"Add\" to create a profile now.</string>
    <string name="view_all_patients"><u>View all Patients</u></string>
    <string name="enter_patient_name">Enter Patient Name *</string>
    <string name="enter_patient_contact">Enter Patient Contact *</string>
    <string name="enter_patient_email">Enter Patient Email</string>
    <string name="enter_patient_age">Enter Patient Age</string>
    <string name="select_patient_gender">Select Patient Gender</string>
    <string name="patient_type">Patient Type</string>
    <string name="select_patient_interface">Select Patient Interface</string>
    <string name="enter_patient_category">Enter Patient Category</string>
    <string name="enterage">Enter Age</string>
    <string name="enterid">Enter ID</string>
    <string name="enter_category">Enter Category</string>
    <string name="save_patient">Save Patient</string>
    <string name="add_patient_title">Add New Patient</string>
    <string name="view_profile"><u>View Profile</u></string>
    <string name="create_note">Create Note</string>
    <string name="book_new">Book New Appt.</string>
    <string name="home_botnav_home">Home</string>
    <string name="home_botnav_appt">Appointment</string>
    <string name="home_botnav_patient">Patient</string>
    <string name="home_botnav_chat">Chat</string>
    <string name="home_botnav_more">More</string>
    <string name="home_menu_setting">Settings</string>
    <string name="type">Type</string>
    <string name="attendance">Attendance</string>
    <string name="payment">Payment</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="note">Notes</string>
    <string name="notes">Notes: </string>
    <string name="completed">Completed</string>
    <string name="none">None</string>
    <string name="set_type">Set Type</string>
    <string name="pending">Pending</string>
    <string name="view">View</string>
    <string name="category_assigned">Assigned</string>
    <string name="na">NA</string>
    <string name="assign_cat">Category</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="video_article">Videos</string>
    <string name="text_article">Written Articles</string>
    <string name="add_article">Add Article</string>
    <string name="msg_send">Messages</string>
    <string name="publish">Publish New</string>
    <string name="write">Write New</string>
    <string name="send">Send New</string>
    <string name="more">More</string>
    <string name="registered">Registered</string>
    <string name="internal">Internal</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="background">Background</string>
    <string name="family">Family</string>
    <string name="records">Records</string>
    <string name="add">Add</string>
    <string name="appointment">Appointment</string>
    <string name="book">Book</string>
    <string name="shared_by_patient">Shared By Patient</string>
    <string name="view_attachment">View Attachment</string>
    <string name="select_from_current_case">Select from current case</string>
    <string name="proceed">Proceed</string>
    <string name="or">OR</string>
    <string name="enter_case_name">Enter Case Name</string>
    <string name="create_proceed">Create &amp; Proceed</string>
    <string name="create_interaction">Create Interaction</string>
    <string name="select_mode">Select Mode</string>
    <string name="on">ON</string>
    <string name="at">AT</string>
    <string name="interaction_details">Interaction Details</string>
    <string name="pdf">PDF</string>
    <string name="written_notes">Handwritten notes</string>
    <string name="evaluation">Evaluation</string>
    <string name="treatment_plan">Treatment Plan</string>
    <string name="view_all">View All</string>
    <string name="attachment">Attachment</string>
    <string name="pres_valid_till">Prescription Valid Till</string>
    <string name="description">Description</string>
    <string name="medical_prescription">Medical Prescription</string>
    <string name="test_prescription">Test Prescription</string>
    <string name="save">Save</string>
    <string name="search_patient">Search Patient</string>
    <string name="add_patient">Add Patient</string>
    <string name="find_earliest">Find Earliest</string>
    <string name="next_date">Next Date</string>
    <string name="select_a_slot">Select a slot</string>
    <string name="patient_name">Name</string>
    <string name="patient_number">Number</string>
    <string name="patient_email">Email</string>
    <string name="patient_age">Age</string>
    <string name="patient_id">ID</string>
    <string name="create_app_access">Create App Access</string>
    <string name="create_patient">Create Patient</string>
    <string name="enter_name_no_id">Enter Name/Number/ID</string>
    <string name="to_book_appt">To Book An Appointment</string>
    <string name="book_search_empty_text">1. Search for a patient by name or number.\n OR \n 2. Add a new patient by clicking the button below.</string>
    <string name="articles">Articles</string>
    <string name="video_details">Video Details</string>
    <string name="title_mandatory">Title (Mandatory)</string>
    <string name="description_mandatory">Description (Mandatory)</string>
    <string name="language">Language</string>
    <string name="select_language">Select language</string>
    <string name="next">NEXT</string>
    <string name="video_url">Video URL (Mandatory)</string>
    <string name="create">CREATE</string>
    <string name="text_articles">Text articles</string>
    <string name="content_mandatory">Content (mandatory)</string>
    <string name="image_articles">Image article</string>
    <string name="add_image">Add Image</string>
    <string name="create_message">Send Message</string>
    <string name="write_message_here">Write message here</string>
    <string name="consulted_patient">Consulted Patients Only</string>
    <string name="all_register_user">All Registered Users</string>
    <string name="this_message_will_only">This message will be instantly sent as a notification (NOT SMS) to your consulted patients who have downloaded your mobile app</string>
    <string name="successful_settlement_notes">successful settlement is the amount which transferred successfully into your account by payU.</string>
    <string name="pending_settlement_notes">If patient complete the payment process through online then the payment status will be Received</string>
    <string name="pending_status_notes">If patient has not done the payment yet for the current consultation, the payment status will be pending. Usually this happens when the payment is offline for clinic consultation</string>
    <string name="received_status_notes">If patient complete the payment process through online then the payment status will be Received</string>
    <string name="payment_received">Payment Received Successfully</string>
    <string name="pending_settlement_bottom">This Indicates that the amount has not been credited to your account due to certain reasons-\n 1.You need to complete KYC verification on PayU portal as you have reached 10K limit.\n 2.Your payment is still under process</string>
    <string name="success_settlement_bottom">This Indicates that the amount has been successfully credited to your account via PayU.</string>
    <string name="enter_email">Email</string>
    <string name="enter_email_edit">Enter Email</string>
    <string name="enter_phone">Phone Number</string>
    <string name="enter_phone_edit">Enter Phone Number</string>
    <string name="select_gender">Select Gender</string>
    <string name="symptoms">Symptoms</string>
    <string name="invest_result">Investigation Results</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="do_you_wish">Do you wish to block your time?</string>
    <string name="yes">Ok</string>
    <string name="no">Don\'t Allow</string>
    <string name="add_new">Add New</string>
    <string name="patient_info">Patient Info</string>
    <string name="family_info">Family Info</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Patient Name *</string>
    <string name="enter_id">Patient ID</string>
    <string name="enter_id_edit">Enter Patient ID</string>
    <string name="enter_height">Patient Height &lt;in cm&gt;</string>
    <string name="enter_age">Patient Age &lt;in years&gt;</string>
    <string name="enter_dob">DOB</string>
    <string name="enter_dob_edit">Enter DOB</string>
    <string name="enter_bloodg">Blood Group</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>