<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/recordEcntNotesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@color/colorWhite"
                android:visibility="visible">

                <TextView
                    android:id="@+id/recordNotesAttach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/attachment"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/recordNotesView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@+id/recordNotesAttach"
                    android:text="@string/view"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recordNotesPresValid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recordNotesAttach"
                    android:layout_marginStart="10dp"
                    android:text="@string/pres_valid_till"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/recordNotesDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recordNotesPresValid"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:text="@string/description"/>

                <TextView
                    android:id="@+id/recordNotesMedPres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recordNotesDescription"
                    android:layout_marginStart="10dp"
                    android:text="@string/medical_prescription"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/recordNotesMedPresIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_cancel"
                    android:layout_toRightOf="@+id/recordNotesMedPres"
                    android:layout_below="@+id/recordNotesDescription"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/recordNotesTestPres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recordNotesMedPres"
                    android:layout_marginStart="10dp"
                    android:text="@string/test_prescription"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/recordNotesTestPresIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_cancel"
                    android:layout_toRightOf="@+id/recordNotesTestPres"
                    android:layout_below="@+id/recordNotesMedPres"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="10dp"/>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>