<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/dialogText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/do_you_wish"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/no"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/yes"/>


    </LinearLayout>

</LinearLayout>